# spelly_mobile_test

./: .gitignore  README.md  config.browserstack.env  config.browserstack.env.sample  config.local.env.sample  config.personal.env  config.py  conftest.py  pyproject.toml  requirements.txt
spelly_mobile_test/model/: app.py  main_screen.py
spelly_mobile_test/model/screens/: main_screen.py  spell_screen.py
spelly_mobile_test/utils/: __init__.py  attach.py  file.py  monkey.py
spelly_mobile_test/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py  test_app.py  test_spells.py
utils/: attach_video.py
