[tool.poetry]
name = "spelly-mobile-test"
version = "0.1.0"
description = ""
authors = ["slazarska <slazarska@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0-beta.14", allow-prereleases = true}
Appium-Python-Client = "^2.7.1"
pytest-xdist = "^2.5.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
pytest = "^7.1.3"
allure-pytest = "^2.10.0"
selenium = "^4.4.3"

[tool.pytest.ini_options]
addopts="-vv --alluredir=allure-results --clean-alluredir"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"